--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,7 @@
 				"https://*/*"
 			],
 			"js" : ["contentscript.js"],
-			"run_at" : "document_idle",
+			"run_at" : "document_end",
 			"all_frames" : false
 		}
 	],
