--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,11 @@
 {
 	"name": "Show image transparency",
-	"version": "0.0.3",
+	"version": "0.0.7",
 	"description": "Displays a 'checkerboard' pattern behind transparent images when they're viewed directly",
+	"icons": {
+		"16": "icon.png",
+		"128": "icon-128.png"
+	},
 
 	"background_page": "background.html",
 	"options_page": "options.html",
